added charge controller library

--- a/platformio.ini
+++ b/platformio.ini
@@ -97,6 +97,7 @@ build_flags =
 lib_deps =
     olikraus/U8g2                      ; OLED display library
     lnlp/EasyLed                       ; LED library
+	4-20ma/ModbusMaster @ ^2.0.1       ; Modbus RTU Master library
 ;   ███ Add additional libraries for User Code below this line ███
 
 
